fix(cli): enhance argument parsing to accumulate repeated options